kubernetes/app1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhs-gitea-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: app1.gitea.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dhs-gitea-svc
            port:
              number: 3000
